--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,8 +4,8 @@
       <p>A Better than Jose Program</p>
     </div>
     <ul>
-      <li><a href="/">Blogs</a></li>
-      <li><a href="/about">About</a></li>
-      <li><a href="/blogs/create">New Blog</a></li>
+      <li><a href="/">Home</a></li>
+      <li><a href="/about">Scanner</a></li>
+      <li><a href="/students/create">New Student</a></li>
     </ul>
   </nav>
